--- a/.vscode/launch.json
+++ b/.vscode/launch.json
@@ -4,18 +4,36 @@
   // For more information, visit: https://go.microsoft.com/fwlink/?linkid=830387
   "version": "0.2.0",
   "configurations": [
+    // {
+    //   "name": "manifold test",
+    //   "type": "cppdbg",
+    //   "MIMode": "lldb",
+    //   "request": "launch",
+    //   "program": "${workspaceFolder}/build/test/manifold_test",
+    //   "args": [
+    //     "--gtest_catch_exceptions=0",
+    //     "--gtest_filter=Properties.ToleranceSphere"
+    //   ],
+    //   "stopAtEntry": false,
+    //   "cwd": "${workspaceFolder}/build/test",
+    //   "environment": [
+    //     {
+    //       "name": "MALLOC_CHECK_",
+    //       "value": "2"
+    //     }
+    //   ],
+    //   "externalConsole": false
+    // }
     {
-      "name": "manifold test",
+      "name": "Offset",
       "type": "cppdbg",
-      "MIMode": "lldb",
       "request": "launch",
-      "program": "${workspaceFolder}/build/test/manifold_test",
+      "program": "${workspaceFolder}/build/project/OffsetMain",
       "args": [
-        "--gtest_catch_exceptions=0",
-        "--gtest_filter=Properties.ToleranceSphere"
+        "0"
       ],
       "stopAtEntry": false,
-      "cwd": "${workspaceFolder}/build/test",
+      "cwd": "${workspaceFolder}/build",
       "environment": [
         {
           "name": "MALLOC_CHECK_",
