--- a/project/CMakeLists.txt
+++ b/project/CMakeLists.txt
@@ -1,4 +1,4 @@
 # Add an executable
-add_executable(OffsetMain Fillet.cpp)
+add_executable(OffsetMain Det.cpp)
 
 target_link_libraries(OffsetMain PUBLIC manifold assimp)
